# libmultiprocess

./: .clang-tidy  CMakeLists.txt  shell.nix
.github/workflows/: ci.yml
ci/: README.md
ci/configs/: default.sh  freebsd.bash  llvm.sh  netbsd.bash  newdeps.bash  olddeps.bash  openbsd.bash  sanitize.bash
ci/scripts/: build.sh  ci.sh  configure.sh  run.sh  test.sh
cmake/: MpgenMacros.cmake  TargetCapnpSources.cmake
doc/: design.md
example/: CMakeLists.txt  calculator.cpp  example.cpp
include/mp/: proxy-io.h  proxy-types.h  proxy.h  type-context.h  type-function.h  type-map.h  type-number.h  type-set.h  type-unordered-set.h  type-vector.h  util.h
src/mp/: gen.cpp  proxy.cpp  util.cpp
test/: CMakeLists.txt
test/mp/test/: foo-types.h  foo.capnp  foo.h  test.cpp
